live updates are real-time and overwriting file is triggered after 500ms of inactivity

--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,10 @@
   <div class="container" id="js-ctn">
   </div>
 
-  <script src="http://localhost:8080/socket.io/socket.io.js"></script>
+  <script src="http://192.168.1.16:8080/socket.io/socket.io.js"></script>
 
+  <script src="/jquery/dist/jquery.js"></script>
   <script src="js/config.js"></script>
-  <script src="js/colors.js"></script>
   <script src="js/main.js"></script>
 </body>
 </html>
